Updating training workflow

--- a/notebooks/custom-model.ipynb
+++ b/notebooks/custom-model.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "34eb08a4-29cd-4943-aaa8-7f5243d30ecf",
    "metadata": {},
    "source": [
     "# Customizing LayoutParser Models Using Studio Label Annotation\n",
@@ -17,7 +16,6 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "56f07c8a-866a-4bf9-bd6e-386d6a1ef6d1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +31,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "957117a4-cd24-4fdf-a715-bd995358dba9",
    "metadata": {},
    "source": [
     "## 1. Define the problem\n",
@@ -57,7 +54,6 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "12fec3f4-45d3-4018-9f68-62ee506c5b6f",
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +77,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3164da22-4d4d-4836-9de2-fbd728f6d71f",
    "metadata": {},
    "source": [
     "Problem: pretrained models are not optimized for this kind of index card layout\n",
@@ -92,7 +87,6 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "59e6ef4a-15a1-4dc5-a7d9-49e3f5a0729f",
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +127,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3b4d2b00-8274-4029-bf3b-3961240abad4",
    "metadata": {},
    "source": [
     "## 2. Create a training dataset \n",
@@ -144,7 +137,6 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "85404f44-dc58-4303-9c59-b4e16bed63f0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +160,6 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "a929a86b-c05f-4e8d-8036-4ebca8e27394",
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +182,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2aca7283-b30f-40a7-8ac4-7571aeca3bd0",
    "metadata": {},
    "source": [
     "Load data annotated with Label Studio and check that it's rendered correctly"
@@ -200,7 +190,6 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "d82e1178-bd20-4aa0-af51-6645f81359d1",
    "metadata": {},
    "outputs": [
     {
@@ -238,23 +227,37 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0af2bb06-6136-4cd6-984f-d7541a92523a",
    "metadata": {},
    "source": [
     "## 3. Train layout model\n",
-    "Given a new dataset, produce a new layout model optimized for new dataset (performance will depend on the size and difficulty of the dataset)\n",
+    "Given a new dataset, produce a new layout model optimized for new dataset (performance will depend on the size and difficulty of the dataset). Clone this repo (https://github.com/Layout-Parser/layout-model-training).\n",
     "\n",
-    "Clone this repo (https://github.com/Layout-Parser/layout-model-training)\n",
-    "Train-test split (`python cocosplit.py`)\n",
-    "Run training (modify )\n",
+    "### Train-test split (`python cocosplit.py`)\n",
     "\n",
-    "Ideal: GPU machine w/12+ GB of RAM, ~100 examples, model trained in 1.5hrs."
+    "python cocosplit.py --annotation-path ../data/cards/result.json --split-ratio 0.8 --train ../data/cards/train.json --test ../data/cards/test.json\n",
+    "\n",
+    "### Run training (modify )\n",
+    "\n",
+    "Ideal: GPU machine w/12+ GB of RAM, ~100 examples, model trained in 1.5hrs.\n",
+    "\n",
+    "Issue: PyTorch not finding NVIDIA drivers (RuntimeError: Found no NVIDIA driver on your system. Please check that you have an NVIDIA GPU and installed a driver from http://www.nvidia.com/Download/index.aspx)\n",
+    "\n",
+    "Suspect there is a mismatch between versions (CUDA and PyTorch package compiled) - There is a version mismatch. Your installed CUDA version is 9.1. However, your PyTorch package is compiled with CUDA 9.0.\n",
+    "\n",
+    "- see this post describing the issue (https://discuss.pytorch.org/t/found-no-nvidia-driver-on-your-system-but-its-there/35063/2?u=dejanbatanjac)\n",
+    "- see these instructions for reinstalling packages with version, compilation info (https://github.com/pytorch/pytorch/issues/50032)\n",
+    "\n",
+    "Status:\n",
+    "Stuck [here](https://youtu.be/puOKTFXRyr4?t=1493) (can't get Great Lakes to recognize GPU) - submitted ticket\n",
+    "\n",
+    "Solutions:\n",
+    "- reinstall packages (https://github.com/facebookresearch/detectron2/blob/main/INSTALL.md#install-pre-built-detectron2-linux-only)\n",
+    "- set up project in Kaggle and run with GPU\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e48014fb-ea47-41bc-9029-cceb58f6df84",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -276,7 +279,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.13"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
