Adding training scripts and output notebooks

--- a/notebooks/custom-model.ipynb
+++ b/notebooks/custom-model.ipynb
@@ -14,6 +14,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To run on Great Lakes, activate modules and project virtual environment (``layout_parser``):\n",
+    "\n",
+    "```\n",
+    "module purge\n",
+    "conda deactivate\n",
+    "module use /sw/examples/pytorch/modules\n",
+    "module load gcc/8.2.0 image-libraries\n",
+    "module load python/3.9.7 cuda/11.3.0 pytorch/1.10.2\n",
+    "cd $HOME\n",
+    "source layout_parser/bin/activate\n",
+    "```"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 43,
    "metadata": {},
@@ -234,25 +251,13 @@
     "\n",
     "### Train-test split (`python cocosplit.py`)\n",
     "\n",
-    "python cocosplit.py --annotation-path ../data/cards/result.json --split-ratio 0.8 --train ../data/cards/train.json --test ../data/cards/test.json\n",
+    "```\n",
+    "python cocosplit.py --annotation-path ../data/cards-v2/result.json --split-ratio 0.8 --train ../data/cards-v2/train.json --test ../data/cards-v2/test.json\n",
+    "```\n",
     "\n",
-    "### Run training (modify )\n",
+    "### Run training script (modify)\n",
     "\n",
-    "Ideal: GPU machine w/12+ GB of RAM, ~100 examples, model trained in 1.5hrs.\n",
-    "\n",
-    "Issue: PyTorch not finding NVIDIA drivers (RuntimeError: Found no NVIDIA driver on your system. Please check that you have an NVIDIA GPU and installed a driver from http://www.nvidia.com/Download/index.aspx)\n",
-    "\n",
-    "Suspect there is a mismatch between versions (CUDA and PyTorch package compiled) - There is a version mismatch. Your installed CUDA version is 9.1. However, your PyTorch package is compiled with CUDA 9.0.\n",
-    "\n",
-    "- see this post describing the issue (https://discuss.pytorch.org/t/found-no-nvidia-driver-on-your-system-but-its-there/35063/2?u=dejanbatanjac)\n",
-    "- see these instructions for reinstalling packages with version, compilation info (https://github.com/pytorch/pytorch/issues/50032)\n",
-    "\n",
-    "Status:\n",
-    "Stuck [here](https://youtu.be/puOKTFXRyr4?t=1493) (can't get Great Lakes to recognize GPU) - submitted ticket\n",
-    "\n",
-    "Solutions:\n",
-    "- reinstall packages (https://github.com/facebookresearch/detectron2/blob/main/INSTALL.md#install-pre-built-detectron2-linux-only)\n",
-    "- set up project in Kaggle and run with GPU\n"
+    "Ideal: GPU machine w/12+ GB of RAM, ~100 examples, model trained in 1.5hrs"
    ]
   },
   {
