Demonstrating V3 model trained on 400 labeled cards and adding job scripts

--- a/notebooks/custom-model.ipynb
+++ b/notebooks/custom-model.ipynb
@@ -2,10 +2,9 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "fc46352f",
    "metadata": {},
    "source": [
-    "# Customizing LayoutParser Models Using Studio Label Annotation\n",
+    "# Customizing Layout Parser Models\n",
     "\n",
     "Steps:\n",
     "1. Define the problem - what is the extraction target?\n",
@@ -16,7 +15,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f5f21dc4",
    "metadata": {},
    "source": [
     "To run on Great Lakes, activate modules and project virtual environment (``layout_parser``):\n",
@@ -35,7 +33,6 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "0a9cd65e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +48,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d494bece",
    "metadata": {},
    "source": [
     "## 1. Define the problem\n",
@@ -75,7 +71,6 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "92297505",
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +94,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "897a2c4b",
    "metadata": {},
    "source": [
     "Problem: pretrained models are not optimized for this kind of index card layout\n",
@@ -110,7 +104,6 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "51afbd99",
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +144,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a0eb88e3",
    "metadata": {},
    "source": [
     "## 2. Create a training dataset \n",
@@ -162,7 +154,6 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "7048349c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,7 +177,6 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "91787f7e",
    "metadata": {},
    "outputs": [
     {
@@ -209,7 +199,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b2d08c40",
    "metadata": {},
    "source": [
     "Load data annotated with Label Studio and check that it's rendered correctly"
@@ -218,7 +207,6 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "74ff9b63",
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +244,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "407ed34c",
    "metadata": {},
    "source": [
     "## 3. Train layout model\n",
@@ -276,7 +263,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "89d240a3",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -298,7 +284,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.13"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
