--- a/notebooks/custom-model.ipynb
+++ b/notebooks/custom-model.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "2a6c4cec",
    "metadata": {},
    "source": [
     "# Analyzing card layout with custom model\n",
@@ -50,6 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "d99848aa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,6 +71,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6b60bbaa",
    "metadata": {},
    "source": [
     "## 1. Define problem, annotation scheme, and target"
@@ -76,6 +79,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "67f4dbe6",
    "metadata": {},
    "source": [
     "Load a sample image from Turbo. Options:\n",
@@ -91,6 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "61fdeb1c",
    "metadata": {},
    "outputs": [
     {
@@ -131,6 +136,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3498d078",
    "metadata": {},
    "source": [
     "Approach: label N cards in Label Studio and tune PrimaLayout model with Detectron2 library\n",
@@ -157,6 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "146c91eb",
    "metadata": {},
    "outputs": [
     {
@@ -180,6 +187,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "04356e02",
    "metadata": {},
    "source": [
     "Load data annotated with Label Studio and check that it's rendered correctly. If so, train/test split and train a custom model in a terminal. Train model with a SGPU machine w/12+ GB of RAM. ~500 examples takes about 5 hrs (for labeling data and training a model).\n",
@@ -192,6 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "d7161a61",
    "metadata": {},
    "outputs": [
     {
@@ -238,6 +247,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3612b4e5",
    "metadata": {},
    "source": [
     "## 3. Predict bounding boxes with custom model (DIA)"
@@ -246,6 +256,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "abc6b7f7",
    "metadata": {},
    "outputs": [
     {
@@ -274,6 +285,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e44cda8b",
    "metadata": {},
    "source": [
     "Return information about custom layout"
@@ -282,6 +294,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "57148946",
    "metadata": {},
    "outputs": [
     {
@@ -307,6 +320,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "ddfbfc8f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -314,7 +328,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -328,7 +342,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
