--- a/notebooks/map-cards.ipynb
+++ b/notebooks/map-cards.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 1,
    "id": "c3e39a77-536b-47dd-9276-7fca9d8b541c",
    "metadata": {},
    "outputs": [],
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 2,
    "id": "12cc0e55-086e-4cd2-ae6b-e5e8bc3cfb29",
    "metadata": {},
    "outputs": [],
@@ -494,18 +494,18 @@
     }
    ],
    "source": [
-    "df_rfc = pd.read_csv(DIR+'/rfc_loan_agencies.csv') # RFC loan locations\n",
-    "geocoder = RateLimiter(Nominatim(user_agent=\"slafia@umich.edu\").geocode, min_delay_seconds=1) # agent is user id\n",
+    "# df_rfc = pd.read_csv(DIR+'/rfc_loan_agencies.csv') # RFC loan locations\n",
+    "# geocoder = RateLimiter(Nominatim(user_agent=\"slafia@umich.edu\").geocode, min_delay_seconds=1) # agent is user id\n",
     "\n",
-    "df_rfc[\"Location\"] = df_rfc[\"Edited\"].progress_apply(geocoder) # geocode place names\n",
-    "df_rfc[\"Address\"] = df_rfc[\"Location\"].progress_apply(lambda loc: loc.address if loc else None)\n",
-    "df_rfc[\"Latitude\"] = df_rfc[\"Location\"].progress_apply(lambda loc: loc.latitude if loc else None)\n",
-    "df_rfc[\"Longitude\"] = df_rfc[\"Location\"].progress_apply(lambda loc: loc.longitude if loc else None)\n",
+    "# df_rfc[\"Location\"] = df_rfc[\"Edited\"].progress_apply(geocoder) # geocode place names\n",
+    "# df_rfc[\"Address\"] = df_rfc[\"Location\"].progress_apply(lambda loc: loc.address if loc else None)\n",
+    "# df_rfc[\"Latitude\"] = df_rfc[\"Location\"].progress_apply(lambda loc: loc.latitude if loc else None)\n",
+    "# df_rfc[\"Longitude\"] = df_rfc[\"Location\"].progress_apply(lambda loc: loc.longitude if loc else None)\n",
     "\n",
-    "df_rfc = df_rfc[[\"Address\",\"Latitude\",\"Longitude\"]] # simplify dataframe\n",
-    "df_rfc.to_csv(DIR+'/df_rfc_geocoded.csv',index=False) # save output\n",
-    "gdf_rfc = gpd.GeoDataFrame(df_rfc, geometry=gpd.points_from_xy(df_rfc.Longitude, df_rfc.Latitude)) # convert to geo\n",
-    "gdf_rfc"
+    "# df_rfc = df_rfc[[\"Address\",\"Latitude\",\"Longitude\"]] # simplify dataframe\n",
+    "# df_rfc.to_csv(DIR+'/df_rfc_geocoded.csv',index=False) # save output\n",
+    "# gdf_rfc = gpd.GeoDataFrame(df_rfc, geometry=gpd.points_from_xy(df_rfc.Longitude, df_rfc.Latitude)) # convert to geo\n",
+    "# gdf_rfc"
    ]
   },
   {
@@ -984,29 +984,29 @@
     }
    ],
    "source": [
-    "df_card = pd.read_csv(DIR+'/gi_geonormed.csv') # GI mortgage locations\n",
-    "df_card = df_card.dropna(subset=[\"cen_place\", \"state_alpha\"])\n",
-    "df_card[\"cen_place\"] = df_card[\"cen_place\"].astype(str)\n",
-    "df_card[\"state_alpha\"] = df_card[\"state_alpha\"].astype(str)\n",
-    "df_card[\"Edited\"] = df_card[\"cen_place\"] + \", \" + df_card[\"state_alpha\"]\n",
+    "# df_card = pd.read_csv(DIR+'/gi_geonormed.csv') # GI mortgage locations\n",
+    "# df_card = df_card.dropna(subset=[\"cen_place\", \"state_alpha\"])\n",
+    "# df_card[\"cen_place\"] = df_card[\"cen_place\"].astype(str)\n",
+    "# df_card[\"state_alpha\"] = df_card[\"state_alpha\"].astype(str)\n",
+    "# df_card[\"Edited\"] = df_card[\"cen_place\"] + \", \" + df_card[\"state_alpha\"]\n",
     "\n",
-    "df_card.cen_place.value_counts() # which places are most frequent\n",
+    "# df_card.cen_place.value_counts() # which places are most frequent\n",
     "\n",
-    "df_card = df_card.groupby(df_card[\"Edited\"].tolist(),as_index=False).size()\n",
-    "df_card = df_card.rename(columns={\"index\":\"Edited\",\"size\":\"Count\"})\n",
+    "# df_card = df_card.groupby(df_card[\"Edited\"].tolist(),as_index=False).size()\n",
+    "# df_card = df_card.rename(columns={\"index\":\"Edited\",\"size\":\"Count\"})\n",
     "\n",
-    "geocoder = RateLimiter(Nominatim(user_agent=\"slafia@umich.edu\").geocode, min_delay_seconds=1)\n",
+    "# geocoder = RateLimiter(Nominatim(user_agent=\"slafia@umich.edu\").geocode, min_delay_seconds=1)\n",
     "\n",
-    "df_card[\"Location\"] = df_card[\"Edited\"].progress_apply(geocoder) # geocode place names\n",
+    "# df_card[\"Location\"] = df_card[\"Edited\"].progress_apply(geocoder) # geocode place names\n",
     "\n",
-    "df_card[\"Address\"] = df_card[\"Location\"].progress_apply(lambda loc: loc.address if loc else None)\n",
-    "df_card[\"Latitude\"] = df_card[\"Location\"].progress_apply(lambda loc: loc.latitude if loc else None)\n",
-    "df_card[\"Longitude\"] = df_card[\"Location\"].progress_apply(lambda loc: loc.longitude if loc else None)\n",
+    "# df_card[\"Address\"] = df_card[\"Location\"].progress_apply(lambda loc: loc.address if loc else None)\n",
+    "# df_card[\"Latitude\"] = df_card[\"Location\"].progress_apply(lambda loc: loc.latitude if loc else None)\n",
+    "# df_card[\"Longitude\"] = df_card[\"Location\"].progress_apply(lambda loc: loc.longitude if loc else None)\n",
     "\n",
-    "df_card = df_card[[\"Address\",\"Latitude\",\"Longitude\",\"Count\"]] # simplify dataframe\n",
-    "df_card.to_csv(DIR+'/df_card_geocoded.csv',index=False) # save output\n",
-    "gdf_card = gpd.GeoDataFrame(df_card, geometry=gpd.points_from_xy(df_card.Longitude, df_card.Latitude)) # convert to geo\n",
-    "gdf_card"
+    "# df_card = df_card[[\"Address\",\"Latitude\",\"Longitude\",\"Count\"]] # simplify dataframe\n",
+    "# df_card.to_csv(DIR+'/df_card_geocoded.csv',index=False) # save output\n",
+    "# gdf_card = gpd.GeoDataFrame(df_card, geometry=gpd.points_from_xy(df_card.Longitude, df_card.Latitude)) # convert to geo\n",
+    "# gdf_card"
    ]
   },
   {
@@ -1026,7 +1026,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 4,
    "id": "954b7c8a-ee3c-48c4-933b-f811b1ca14c6",
    "metadata": {},
    "outputs": [
@@ -1101,7 +1101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 5,
    "id": "13b431ee-e01f-4df9-8642-11968e538475",
    "metadata": {},
    "outputs": [
@@ -1119,6 +1119,24 @@
     "count = sjoin.groupby(county_id_field)[county_id_field].count()\n",
     "count.name='pointcount'\n",
     "counties = pd.merge(left=counties, right=count, left_on=county_id_field, right_index=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "93c850b8-b0e3-4ac1-b1b3-6136e863e51a",
+   "metadata": {},
+   "source": [
+    "Save geodataframe to shapefile (to display in QGIS)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "b03d62be-4523-4272-99d2-0a2e69a9c901",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "counties.to_file(DIR+'/cards_by_county/cards_by_county.shp') # save output"
    ]
   },
   {
@@ -1183,25 +1201,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": null,
    "id": "7bd36253-4cb6-4964-a97c-12bd07628553",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8b8479a3505c4f27ab935b7c67148987",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Map(center=[39, -95], controls=(ZoomControl(options=['position', 'zoom_in_text', 'zoom_in_title', 'zoom_out_te…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "m = Map(# basemap=basemap_to_tiles(basemaps.CartoDB.VoyagerLabelsUnder),  # initialize map\n",
     "        center=(39, -95), \n",
@@ -1228,19 +1231,19 @@
     "\n",
     "## COUNTIES: CHOROPLETH\n",
     "\n",
-    "# geo_us_data = GeoData(geo_dataframe = counties,\n",
-    "#                    name = 'US counties')\n",
+    "geo_us_data = GeoData(geo_dataframe = counties,\n",
+    "                   name = 'US counties')\n",
     "\n",
-    "# by_counties = dict(zip(counties['index'].tolist(), counties['pointcount'].tolist()))\n",
+    "by_counties = dict(zip(counties['index'].tolist(), counties['pointcount'].tolist()))\n",
     "\n",
-    "# choropleth_layer = Choropleth(\n",
-    "#     geo_data=geo_us_data,\n",
-    "#     choro_data=by_counties,\n",
-    "#     colormap=linear.YlOrRd_04,\n",
-    "#     border_color='black',\n",
-    "#     style={'fillOpacity': 0.8, 'dashArray': '5, 5'})\n",
+    "choropleth_layer = Choropleth(\n",
+    "    geo_data=geo_us_data,\n",
+    "    choro_data=by_counties,\n",
+    "    colormap=linear.YlOrRd_04,\n",
+    "    border_color='black',\n",
+    "    style={'fillOpacity': 0.8, 'dashArray': '5, 5'})\n",
     "\n",
-    "# m.add_layer(choropleth_layer) # add polygons layer to the map\n",
+    "m.add_layer(choropleth_layer) # add polygons layer to the map\n",
     "\n",
     "m.add_layer(geo_data_card) # add points layers to the map\n",
     "m.add_layer(geo_data_rfc) # add points layers to the map\n",
